--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "clsx": "^2.0.0",
     "firebase": "^10.0.0",
+    "luxon": "^3.7.2",
     "next": "^15.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
