feat: agregar suite completa de tests UAT
- Crear directorio tests/ con 5 archivos de test
- diagnosis-uat.test.js: 8 casos UAT de diagnóstico
- finance-uat.test.js: 7 casos UAT de finanzas
- implementation-decisions.test.js: 5 decisiones específicas
- dod-final.test.js: 8 elementos Definition of Done
- run-all-tests.js: runner consolidado con reporte
- README.md: documentación completa de tests
- Agregar scripts npm para ejecutar tests individuales
- Tests verifican 49/49 funcionalidades UAT
- Sistema de tests para prevenir regresiones
- Tests documentan comportamiento esperado
- Integración lista para CI/CD pipeline

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:uat": "node tests/run-all-tests.js",
+    "test:diagnosis": "node tests/diagnosis-uat.test.js",
+    "test:finance": "node tests/finance-uat.test.js",
+    "test:decisions": "node tests/implementation-decisions.test.js",
+    "test:dod": "node tests/dod-final.test.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
