test: 13 casos Radar E-commerce y mensajes de validación alineados al spec
- tests/radar-casos-13.test.js: Casos 01-08 diagnóstico (Tráfico, Página/Oferta, Checkout, Escalar), 09-13 validaciones (carritos>visitas, compras>carritos, compras>checkouts, URL inválida, Campo obligatorio)
- Integración en run-all-tests.js y script npm run test:casos
- i18n: fieldRequired 'Campo obligatorio', urlInvalid con ejemplo dominio, cartsGtVisits/ordersGtCarts/ordersGtCheckouts según spec
- MetricsForm: bloque de ayuda con t() de validación, validación inline usa fieldRequired para campos vacíos

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:diagnosis": "node tests/diagnosis-uat.test.js",
     "test:finance": "node tests/finance-uat.test.js",
     "test:decisions": "node tests/implementation-decisions.test.js",
-    "test:dod": "node tests/dod-final.test.js"
+    "test:dod": "node tests/dod-final.test.js",
+    "test:casos": "node tests/radar-casos-13.test.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
